# osc-data

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yaml
osc_data/: __init__.py  audio.py  audio.pyi  image.py  text.py  text_stream.py  video.py
osc_data/assets/text/tn/: tagger.fst  verbalizer_remove_erhua.fst
osc_data/assets/text/zh/itn/: tagger.fst
osc_data/assets/wetext/en/tn/: verbalizer.fst
osc_data/assets/wetext/zh/itn/: tagger_enable_0_to_9.fst
osc_data/assets/wetext/zh/tn/: tagger.fst  verbalizer.fst
python/osc_data/: __init__.py  audio.py  audio.pyi
src/: audio.rs  image.rs  lib.rs  main.rs  reorder.rs  text.rs  text_stream.rs  video.rs
tests/: benchmark_reorder.py  test_audio.py  test_compute_decibel.py  test_image.py  test_low_frame_rate.py  test_reorder.py  test_sentencizer.py  test_video.py
video_core/: Cargo.toml  pyproject.toml
video_core/python/video/: __init__.py
video_core/src/: lib.rs
video_loader/: pyproject.toml  setup.py
video_loader/rust/: Cargo.toml
