[package]
name = "osc-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "osc_data"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "multiple-pymethods"] }
ndarray = { version = "0.16.1", features = ["blas", "rayon"] }
numpy = "0.25.0"
