[package]
name = "osc-data"
version = "0.2.9-post1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "osc_data"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "multiple-pymethods"] }
ndarray = { version = "0.16.1", features = ["blas", "rayon"] }
numpy = "0.25.0"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
image = "0.25.0"
