[package]
name = "video_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "video_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ndarray = "0.15"
