[build-system]
requires = [
    "setuptools>=68",
    "setuptools-rust>=1.9",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "video_loader"
version = "0.1.0"
description = "Video loader with Rust core (ffmpeg) and Python Video class"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]
readme = "README.md"
authors = [{ name = "Auto", email = "auto@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

