[package]
name = "video_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "video_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
numpy = "0.26"
ndarray = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

